arg: Marshal all structs in out array correctly

Previously, an out array of structs would have all its elements be the
same struct, since gjs_array_from_carray_internal() would not iterate
through the C array correctly. This fixes the iteration and expands the
test case to cover this as well. It also changes the old test case, that
used the Gdk function directly, to a Regress test case, newly added to
Regress in gobject-introspection.

https://bugzilla.gnome.org/show_bug.cgi?id=761658